<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_base">

    <ImageView
        android:id="@+id/menu_bg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:importantForAccessibility="no"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/menu_scrim"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_scrim_gradient"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/menu_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.46" />

    <ImageView
        android:id="@+id/menu_basket"
        android:layout_width="@dimen/sprite_basket_menu"
        android:layout_height="@dimen/sprite_basket_menu"
        android:layout_marginTop="@dimen/status_bar_pad"
        android:contentDescription="@string/desc_menu_basket"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@id/menu_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/menu_sheet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_marble_sheet"
        android:elevation="16dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingStart="@dimen/space_lg"
        android:paddingTop="@dimen/space_lg"
        android:paddingEnd="@dimen/space_lg"
        android:paddingBottom="@dimen/space_lg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/menu_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/menu_title"
            android:textAppearance="@style/TextAppearance.App.Display" />

        <ImageView
            android:id="@+id/menu_divider"
            android:layout_width="@dimen/divider_width"
            android:layout_height="@dimen/divider_height"
            android:layout_marginTop="@dimen/space_xs"
            android:importantForAccessibility="no"
            android:src="@drawable/deco_crown_divider" />

        <TextView
            android:id="@+id/menu_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_sm"
            android:gravity="center"
            android:text="@string/menu_hint"
            android:textAppearance="@style/TextAppearance.App.Body" />

        <LinearLayout
            android:id="@+id/menu_stats_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_md"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:visibility="gone">

            <com.WqNzVmK.rJpLtF.core.ui.StatCardView
                android:id="@+id/menu_stat_best"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/space_xs"
                android:layout_weight="1"
                app:statAccent="@color/gold"
                app:statLabel="@string/stat_best_label" />

            <com.WqNzVmK.rJpLtF.core.ui.StatCardView
                android:id="@+id/menu_stat_accuracy"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_xs"
                android:layout_weight="1"
                app:statAccent="@color/green"
                app:statLabel="@string/stat_accuracy_label" />
        </LinearLayout>

        <FrameLayout
            android:id="@+id/menu_cta_wrap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_md">

            <ImageView
                android:id="@+id/menu_cta_plate"
                android:layout_width="match_parent"
                android:layout_height="@dimen/cta_plate_height"
                android:layout_gravity="center"
                android:alpha="0.92"
                android:importantForAccessibility="no"
                android:scaleType="fitXY" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/menu_play"
                style="@style/Widget.App.Button.Primary"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_primary_height"
                android:text="@string/cta_play"
                app:icon="@drawable/ic_play"
                app:iconGravity="textStart"
                app:iconSize="@dimen/icon_button"
                app:iconTint="@color/bg_base" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_sm"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/menu_recipes"
                style="@style/Widget.App.Button.Secondary"
                android:layout_width="0dp"
                android:layout_height="@dimen/btn_secondary_height"
                android:layout_marginEnd="@dimen/space_xs"
                android:layout_weight="1"
                android:text="@string/cta_recipes" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/menu_how_to"
                style="@style/Widget.App.Button.Secondary"
                android:layout_width="0dp"
                android:layout_height="@dimen/btn_secondary_height"
                android:layout_marginStart="@dimen/space_xs"
                android:layout_weight="1"
                android:text="@string/cta_how_to" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
