<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_deep">

    <ImageView
        android:id="@+id/splash_bg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:importantForAccessibility="no"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/splash_scrim"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_scrim_deep"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/splash_crown"
        android:layout_width="@dimen/crown_big"
        android:layout_height="@dimen/crown_big"
        android:alpha="0"
        android:contentDescription="@string/desc_crown"
        android:src="@drawable/ic_crown_big"
        app:layout_constraintBottom_toTopOf="@id/splash_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/splash_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_lg"
        android:layout_marginStart="@dimen/space_lg"
        android:layout_marginEnd="@dimen/space_lg"
        android:alpha="0"
        android:gravity="center"
        android:text="@string/splash_title"
        android:textAppearance="@style/TextAppearance.App.Display"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/splash_crown"
        app:layout_constraintBottom_toTopOf="@id/splash_brand" />

    <TextView
        android:id="@+id/splash_brand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_xs"
        android:alpha="0"
        android:text="@string/splash_brand"
        android:textAppearance="@style/TextAppearance.App.Label"
        android:textColor="@color/gold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/splash_title"
        app:layout_constraintBottom_toTopOf="@id/splash_divider" />

    <ImageView
        android:id="@+id/splash_divider"
        android:layout_width="@dimen/divider_width"
        android:layout_height="@dimen/divider_height"
        android:layout_marginTop="@dimen/space_lg"
        android:alpha="0"
        android:importantForAccessibility="no"
        android:src="@drawable/deco_crown_divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/splash_brand"
        app:layout_constraintBottom_toBottomOf="parent" />

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/splash_progress"
        android:layout_width="@dimen/progress_width"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space_md"
        android:contentDescription="@string/splash_progress_desc"
        android:indeterminate="true"
        app:indicatorColor="@color/gold"
        app:trackColor="@color/surface_translucent"
        app:trackCornerRadius="2dp"
        app:trackThickness="@dimen/progress_height"
        app:layout_constraintBottom_toTopOf="@id/splash_loading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/splash_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space_xl"
        android:accessibilityLiveRegion="polite"
        android:text="@string/splash_loading"
        android:textAppearance="@style/TextAppearance.App.Label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
